fix(importAccount): fix mobile cut off phrases on import account AP-159 (#564)

--- a/pages/setup/InputAccount/InputAccount.less
+++ b/pages/setup/InputAccount/InputAccount.less
@@ -7,7 +7,9 @@
   text-align: center;
 
   .input-account-body {
+    width: 32rem;
     align-self: center;
+    margin-bottom: 25vh;
     padding: 0 @normal-spacing;
     max-width: 100vw;
     .recover-account.button {
@@ -34,5 +36,18 @@
   }
   .input-error {
     margin-top: @normal-spacing;
+  }
+}
+
+@media only screen and (max-width: @mobile-breakpoint) {
+  .container {
+    .input-account-body {
+      width: 90vw;
+      margin-bottom: 5rem;
+      .recover-account,
+      .columns {
+        width: 100%;
+      }
+    }
   }
 }
